# ComfyUI_RH_VoxCPM

./: .gitignore  README.md  README_zh.md  __init__.py  pyproject.toml  requirements.txt
examples/: VoxCPM2 LoRA Zip批量训练工作流.json  VoxCPM2 LoRA 训练工作流.json  VoxCPM2 基础工作流.json  VoxCPM2 多人工作流.json  voxcpm_ultimate_clone.json  voxcpm_voice_design.json
js/: voxcpm_audio_list.js
nodes/: generate.py  loader.py  multi_speaker.py  train.py
